@@ -1,5 +1,9 @@
 * Nov 1 2000 hship
 
+More changes to the Tutorial, to take advantage of Tapestry's switch-over to Servlet 2.2.
+
+* Nov 1 2000 hship
+
 Convert the Tutorial over to using Jetty.
 
 * Nov 1 2000 hship
